--- a/configure.in
+++ b/configure.in
@@ -905,28 +905,28 @@ AC_SUBST(XMLSEC_STATIC_BINARIES)
 dnl ==========================================================================
 dnl Final steps: xmlsec config
 dnl ==========================================================================
-XMLSEC_NO_CRYPTO_CFLAGS="$XMLSEC_DEFINES -I${includedir}/xmlsec1 $LIBXML_CFLAGS $LIBXSLT_CFLAGS"
-XMLSEC_NO_CRYPTO_LIBS="-lxmlsec1 $LIBXML_LIBS $LIBXSLT_LIBS"
-AC_SUBST(XMLSEC_NO_CRYPTO_CFLAGS)
-AC_SUBST(XMLSEC_NO_CRYPTO_LIBS)
+XMLSEC_CORE_CFLAGS="$XMLSEC_DEFINES -I${includedir}/xmlsec1"
+XMLSEC_CORE_LIBS="-lxmlsec1 "
+AC_SUBST(XMLSEC_CORE_CFLAGS)
+AC_SUBST(XMLSEC_CORE_LIBS)
 
-XMLSEC_OPENSSL_CFLAGS="$XMLSEC_NO_CRYPTO_CFLAGS $LIBXSLT_CFLAGS $OPENSSL_CFLAGS"
-XMLSEC_OPENSSL_LIBS="-L${libdir} -l$OPENSSL_CRYPTO_LIB $XMLSEC_NO_CRYPTO_LIBS  $OPENSSL_LIBS"
+XMLSEC_OPENSSL_CFLAGS="$XMLSEC_CORE_CFLAGS $OPENSSL_CFLAGS"
+XMLSEC_OPENSSL_LIBS="-L${libdir} -l$OPENSSL_CRYPTO_LIB $XMLSEC_CORE_LIBS  $OPENSSL_LIBS"
 AC_SUBST(XMLSEC_OPENSSL_CFLAGS)
 AC_SUBST(XMLSEC_OPENSSL_LIBS)
 
-XMLSEC_GNUTLS_CFLAGS="$XMLSEC_NO_CRYPTO_CFLAGS $LIBXSLT_CFLAGS $GNUTLS_CFLAGS"
-XMLSEC_GNUTLS_LIBS="-L${libdir} -l$GNUTLS_CRYPTO_LIB $XMLSEC_NO_CRYPTO_LIBS $GNUTLS_LIBS"
+XMLSEC_GNUTLS_CFLAGS="$XMLSEC_CORE_CFLAGS $GNUTLS_CFLAGS"
+XMLSEC_GNUTLS_LIBS="-L${libdir} -l$GNUTLS_CRYPTO_LIB $XMLSEC_CORE_LIBS $GNUTLS_LIBS"
 AC_SUBST(XMLSEC_GNUTLS_CFLAGS)
 AC_SUBST(XMLSEC_GNUTLS_LIBS)
 
-XMLSEC_NSS_CFLAGS="$XMLSEC_NO_CRYPTO_CFLAGS $LIBXSLT_CFLAGS $NSS_CFLAGS"
-XMLSEC_NSS_LIBS="-L${libdir} -l$NSS_CRYPTO_LIB $XMLSEC_NO_CRYPTO_LIBS  $NSS_LIBS"
+XMLSEC_NSS_CFLAGS="$XMLSEC_CORE_CFLAGS $NSS_CFLAGS"
+XMLSEC_NSS_LIBS="-L${libdir} -l$NSS_CRYPTO_LIB $XMLSEC_CORE_LIBS $NSS_LIBS"
 AC_SUBST(XMLSEC_NSS_CFLAGS)
 AC_SUBST(XMLSEC_NSS_LIBS)
 
-XMLSEC_CFLAGS="$XMLSEC_NO_CRYPTO_CFLAGS $LIBXSLT_CFLAGS $XMLSEC_CRYPTO_CFLAGS"
-XMLSEC_LIBS="-L${libdir} -l$XMLSEC_CRYPTO_LIB $XMLSEC_NO_CRYPTO_LIBS  $XMLSEC_CRYPTO_LIBS"
+XMLSEC_CFLAGS="$XMLSEC_CORE_CFLAGS $LIBXML_CFLAGS $LIBXSLT_CFLAGS $XMLSEC_CRYPTO_CFLAGS"
+XMLSEC_LIBS="-L${libdir} -l$XMLSEC_CRYPTO_LIB $XMLSEC_CORE_LIBS $LIBXML_LIBS $LIBXSLT_LIBS $XMLSEC_CRYPTO_LIBS"
 AC_SUBST(XMLSEC_CFLAGS)
 AC_SUBST(XMLSEC_LIBS)
 
@@ -983,7 +983,6 @@ man/Makefile
 ]
 [xmlsec1Conf.sh:xmlsecConf.sh.in]
 [xmlsec1-config:xmlsec-config.in]
-[xmlsec1.pc:xmlsec.pc.in]
 [xmlsec1-openssl.pc:xmlsec-openssl.pc.in]
 [xmlsec1-gnutls.pc:xmlsec-gnutls.pc.in]
 [xmlsec1-nss.pc:xmlsec-nss.pc.in]
