--- a/xmlsec-gnutls.pc.in
+++ b/xmlsec-gnutls.pc.in
@@ -7,5 +7,5 @@ Name: xmlsec-gnutls
 Version: @VERSION@-gnutls
 Description: XML Security Library implements XML Signature and XML Encryption standards
 Requires: libxml-2.0 >= @LIBXML_MIN_VERSION@ libxslt >= @LIBXSLT_MIN_VERSION@ 
-Cflags: @XMLSEC_GNUTLS_CFLAGS@ @CFLAGS@
-Libs: @XMLSEC_GNUTLS_LIBS@ @LIBS@
+Cflags: @XMLSEC_GNUTLS_CFLAGS@
+Libs: @XMLSEC_GNUTLS_LIBS@ 
