--- a/xmlsec-gnutls.pc.in
+++ b/xmlsec-gnutls.pc.in
@@ -3,8 +3,8 @@ exec_prefix=@exec_prefix@
 libdir=@pkglibdir@
 includedir=@pkgincludedir@
 
-Name: xmlsec-gnutls
-Version: @VERSION@-gnutls
+Name: xmlsec1-gnutls
+Version: @VERSION@
 Description: XML Security Library implements XML Signature and XML Encryption standards
 Requires: libxml-2.0 >= @LIBXML_MIN_VERSION@ libxslt >= @LIBXSLT_MIN_VERSION@ 
 Cflags: @XMLSEC_GNUTLS_CFLAGS@
