--- a/xmlsec-nss.pc.in
+++ b/xmlsec-nss.pc.in
@@ -3,9 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@pkglibdir@
 includedir=@pkgincludedir@
 
-Name: xmlsec-nss
-Version: @VERSION@-nss
+Name: xmlsec1-nss
+Version: @VERSION@
 Description: XML Security Library implements XML Signature and XML Encryption standards
 Requires: libxml-2.0 >= @LIBXML_MIN_VERSION@ libxslt >= @LIBXSLT_MIN_VERSION@ mozilla-nss >= @MOZILLA_MIN_VERSION@
-Cflags: @XMLSEC_NSS_CFLAGS@
-Libs: @XMLSEC_NSS_LIBS@
+Cflags: -DXMLSEC_CRYPTO="nss" -DXMLSEC_CRYPTO_NSS=1 @XMLSEC_CORE_CFLAGS@
+Libs: -L${libdir} -lxmlsec1-nss @XMLSEC_CORE_LIBS@
