--- a/xmlsec.spec.in
+++ b/xmlsec.spec.in
@@ -125,6 +125,7 @@ rm -rf $RPM_BUILD_ROOT
 %{prefix}/lib/libxmlsec1.*a
 %{prefix}/lib/libxmlsec1-openssl.*a
 %{prefix}/lib/pkgconfig/xmlsec1.pc
+%{prefix}/lib/pkgconfig/xmlsec1-openssl.pc
 %{prefix}/lib/xmlsec1Conf.sh
 %{prefix}/share/doc/xmlsec1/* 
 %doc AUTHORS HACKING ChangeLog NEWS README Copyright
@@ -141,5 +142,6 @@ rm -rf $RPM_BUILD_ROOT
 
 %{prefix}/include/xmlsec1/xmlsec/nss/*.h
 %{prefix}/lib/libxmlsec1-nss.*a
+%{prefix}/lib/pkgconfig/xmlsec1-nss.pc
 
 %changelog
