moved code for reading X509Data node content from xmlsec-openssl to
* include/xmlsec/Makefile.am include/xmlsec/x509.h src/Makefile.am
  src/x509.c src/openssl/x509.c win32/Makefile.msvc: moved code for
  reading X509Data node content from xmlsec-openssl to xmlsec-core
  to allow sharing with xmlsec-nss
* src/nss/README src/nss/x509.c: added X509Data templates support
  for xmslec-nss (bug #118636, based on patch from Tej)

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -85,6 +85,7 @@ XMLSEC_OBJS = \
 	$(XMLSEC_INTDIR)\strings.obj \
 	$(XMLSEC_INTDIR)\templates.obj \
 	$(XMLSEC_INTDIR)\transforms.obj \
+	$(XMLSEC_INTDIR)\x509.obj \
 	$(XMLSEC_INTDIR)\xkms.obj \
 	$(XMLSEC_INTDIR)\xmldsig.obj \
 	$(XMLSEC_INTDIR)\xmlenc.obj \
@@ -112,6 +113,7 @@ XMLSEC_OBJS_A = \
 	$(XMLSEC_INTDIR_A)\strings.obj \
 	$(XMLSEC_INTDIR_A)\templates.obj \
 	$(XMLSEC_INTDIR_A)\transforms.obj \
+	$(XMLSEC_INTDIR_A)\x509.obj \
 	$(XMLSEC_INTDIR_A)\xkms.obj \
 	$(XMLSEC_INTDIR_A)\xmldsig.obj \
 	$(XMLSEC_INTDIR_A)\xmlenc.obj \
