--- a/xmlsec-openssl.pc.in
+++ b/xmlsec-openssl.pc.in
@@ -1,7 +1,7 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
-libdir=@pkglibdir@
-includedir=@pkgincludedir@
+libdir=@libdir@
+includedir=@includedir@
 
 Name: xmlsec1-openssl
 Version: @VERSION@
