--- a/xmlsecConf.sh.in
+++ b/xmlsecConf.sh.in
@@ -1,6 +1,11 @@
 #
 # Configuration file for using the XML library in GNOME applications
 #
+prefix="@prefix@"
+exec_prefix="@exec_prefix@"
+libdir="@libdir@"
+includedir="@includedir@"
+
 XMLSEC_LIBDIR="@XMLSEC_LIBDIR@"
 XMLSEC_INCLUDEDIR="@XMLSEC_CFLAGS@"
 XMLSEC_LIBS="@XMLSEC_LIBS@"
