determine if __FUNCTION__ or __func__ are defined from ./configure script.
* configure.in include/xmlsec/errors.h: determine if __FUNCTION__ or
__func__ are defined from ./configure script. This should fix bug #120469
and prevent this problem from happening in the future.
* src/c14n.c src/openssl/kt_rsa.c src/transforms.c: fixed minor
warnings because of using strcmp, strchr, etc. functions with xmlChar*
variables by switching to xmlStrcmp, xmlStrchr, etc. (also bug #120469)

--- a/configure.in
+++ b/configure.in
@@ -88,6 +88,25 @@ case "${host}" in
 	;;
 esac
 
+dnl Check for __FUNCTION__ or __FUNCTION__
+AC_MSG_CHECKING(for __FUNCTION__ or __func__)
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],
+	[[char *foo = __FUNCTION__;]])],
+	[ac_function_exists=yes],
+	[ac_function_exists=no])
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],
+	[[char *foo = __func__;]])],
+	[ac_func_exists=yes],
+	[ac_func_exists=no])
+if test "$ac_function_exists" = "yes" ; then
+	AC_MSG_RESULT(__FUNCTION__)
+	XMLSEC_DEFINES="$XMLSEC_DEFINES -D__XMLSEC_FUNCTION__=__FUNCTION__"
+elif test "$ac_func_exists" = "yes" ; then 
+	AC_MSG_RESULT(__func__)
+	XMLSEC_DEFINES="$XMLSEC_DEFINES -D__XMLSEC_FUNCTION__=__func__"
+else 
+	AC_MSG_RESULT("no")
+fi
 
 dnl ==========================================================================
 dnl check do we have size_t and its size, 
