--- a/src/nss/Makefile.am
+++ b/src/nss/Makefile.am
@@ -6,6 +6,7 @@ EXTRA_DIST = \
 	$(NULL)
 
 INCLUDES = \
+	-DPACKAGE=\"@PACKAGE@\" \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/include \
 	$(XMLSEC_DEFINES) \
